--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,10 @@ default: &default
   timeout: 5000
 
 development:
+  adapter: sqlite3
+  database: db/shows_tonight_development.sqlite3
+  pool: 5
+  timeout: 5000
   <<: *default
   database: db/development.sqlite3
 
